tests/compile_fail/ktstr_test_llcs_not_divisible_by_numa_nodes.rs
use ktstr::ktstr_test;

#[ktstr_test(llcs = 3, numa_nodes = 2)]
fn bad(_ctx: &ktstr::scenario::Ctx) -> anyhow::Result<ktstr::assert::AssertResult> {
    Ok(ktstr::assert::AssertResult::pass())
}

fn main() {}
