tests/compile_fail/ktstr_test_llcs_not_divisible_by_numa_nodes.stderr
error: llcs (3) must be divisible by numa_nodes (2)
 --> tests/compile_fail/ktstr_test_llcs_not_divisible_by_numa_nodes.rs:3:1
  |
3 | #[ktstr_test(llcs = 3, numa_nodes = 2)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ktstr_test` (in Nightly builds, run with -Z macro-backtrace for more info)
